# emoji_enhancer

./: README.md  pyproject.toml
data/: emoji_embeddings.py  emojional_dictionary.csv  recipes_1000.csv
emoji_enhancer/: cli.py  utils.py
emoji_enhancer/methods/: utils_dictionary.py  utils_emoji2vec.py  utils_spacy.py
models/: models.ipynb  models.xlsx
tests/: test_cli.py  test_utils.py
